src/test/deca/context/invalid/affectation-wrongTypeAffectationIntBool.deca
{
	int i = 5;
    boolean c = true;
    i = c;
}
